--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,21 @@
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+    { "path": "./tsconfig.node.json" },
+    
+  ],
+  "compilerOptions": {
+    "baseUrl": "./", // Root directory of your project
+    "paths": {
+      "@/*": ["src/*"], // Map @/ to src/
+      "@components/*": ["src/components/*"],
+      "@types/*": ["src/types/*"],
+      "@hooks/*": ["src/hooks/*"]
+    }
+  },
+  "paths": {
+  "@components/*": ["src/components/*"],
+  "@types/*": ["src/types/*"],
+  "@hooks/*": ["src/hooks/*"]
+}
 }
