--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,10 +26,11 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false
  
   },
   "include": ["src"]
