--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "@components/*": ["src/components/*"],
       "@types/*": ["src/types/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@pages/*": ["src/hooks/*"]
+      "@pages/*": ["src/pages/*"]
     }
   }
 }
