--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,9 @@
       "@types/*": ["src/types/*"],
       "@hooks/*": ["src/hooks/*"],
       "@pages/*": ["src/pages/*"],
+      "@navbar/*": ["src/navbar/*"],
+      "@logo/*": ["src/logo/*"],
+      "@form/*": ["src/form/*"],
       "@/*": ["src/*"] // Map @/ to src/
     },
 
