--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,6 @@
     "skipLibCheck": true,
     "incremental": true, // Enable incremental compilation
 
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -19,8 +18,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["vite.config.ts"]
 }
