--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typed-redux-saga": "^1.5.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
