--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "" # Skip the build step
-  publish = "dist" # Point to the folder with pre-built static files
+  command = "yarn build" # Optional if skipping build
+    publish = "dist"
