--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,13 +10,13 @@
     "baseUrl": "./", // Root directory of your project
     "paths": {
       "@/*": ["src/*"],
-      "@components/*": ["src/components/*"],
-      "@types/*": ["src/types/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@pages/*": ["src/pages/*"],
-      "@navbar/*": ["src/navbar/*"],
-      "@logo/*": ["src/logo/*"],
-      "@form/*": ["src/form/*"],
+      "@/components/*": ["src/components/*"],
+      "@/types/*": ["src/types/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/pages/*": ["src/pages/*"],
+      "@/navbar/*": ["src/navbar/*"],
+      "@/logo/*": ["src/logo/*"],
+      "@/form/*": ["src/form/*"],
 
     },
 
